fix(beta): resolve issue with height/overflow

--- a/first-paint/src/v3/styles/docsify.scss
+++ b/first-paint/src/v3/styles/docsify.scss
@@ -183,5 +183,6 @@ section.cover h1 {
 
 section.cover.show {
   min-height: 100vh;
+  height: auto;
   background: none !important;
 }
